--- a/sjava-android-book/AndroidManifest.xml
+++ b/sjava-android-book/AndroidManifest.xml
@@ -85,11 +85,17 @@
             android:name="net.sjava.book.ch08.Ch08Activity"
             android:label="8장 예제" />
         <activity
-            android:name="net.sjava.book.ch09.Ch0901Activity"
+            android:name="net.sjava.book.ch09.Ch09Activity"
             android:label="9장 예제" />
         <activity
+            android:name="net.sjava.book.ch09.Ch0901Activity"
+            android:label="9-1 예제" />
+        <activity
+            android:name="net.sjava.book.ch09.Ch0902Activity"
+            android:label="9-2 예제" />
+        <activity
             android:name="net.sjava.book.ch09.Ch0901ViewerActivity"
-            android:label="9장 예제" />
+            android:label="9-1 예제" />
     </application>
 
 </manifest>
